[tool.poetry]
name = "cuda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
